--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,10 @@ hr{
     width: 25%;
     margin-left: 30px;
 }
+.contact-me{
+  width: 50%;
+  margin: auto;
+}
 .btn {
    background-image: linear-gradient(#D06E6E, #B54040);
    border-radius: 11px;
