--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ h2, h3{
 h3, a{
   color: #b54040;
   text-decoration: none;
-  margin: auto 15px 20px;
+  margin: auto 15px 20px 0;
 }
 a:hover{
   color: #fff0f0;
